Address PR review feedback

- expanded PR to also fix bpo-20361 and have -b & -bb
  take precedence over any other warnings options
- reverted to the short implicit filter list in Py_DEBUG builds
  (this is now even shorter than it was previously, as there
  are *no* implicit filters in debug builds)