Lib/test/test_cmd_line.py
@@ -542,46 +542,25 @@ class CmdLineTest(unittest.TestCase):
                 "print(' '.join('%s::%s' % (f[0], f[2].__name__) "
                                 "for f in warnings.filters))")
         if hasattr(sys, 'gettotalrefcount'):
-            resource_action = "default"
+            expected_filters = "default::Warning"
         else:
-            resource_action = "ignore"
+            expected_filters = ("default::Warning "
+                                "ignore::DeprecationWarning "
+                                "ignore::PendingDeprecationWarning "
+                                "ignore::ImportWarning "
+                                "ignore::ResourceWarning")
 
         out = self.run_xdev("-c", code)
-        self.assertEqual(out,
-                         "default::Warning "
-                         "ignore::DeprecationWarning "
-                         "ignore::PendingDeprecationWarning "
-                         "ignore::ImportWarning "
-                         "ignore::BytesWarning "
-                         f"{resource_action}::ResourceWarning")
+        self.assertEqual(out, expected_filters)
 
         out = self.run_xdev("-b", "-c", code)
-        self.assertEqual(out,
-                         "default::Warning "
-                         "ignore::DeprecationWarning "
-                         "ignore::PendingDeprecationWarning "
-                         "ignore::ImportWarning "
-                         "default::BytesWarning "
-                         f"{resource_action}::ResourceWarning")
+        self.assertEqual(out, f"default::BytesWarning {expected_filters}")
 
         out = self.run_xdev("-bb", "-c", code)
-        self.assertEqual(out,
-                         "default::Warning "
-                         "ignore::DeprecationWarning "
-                         "ignore::PendingDeprecationWarning "
-                         "ignore::ImportWarning "
-                         "error::BytesWarning "
-                         f"{resource_action}::ResourceWarning")
+        self.assertEqual(out, f"error::BytesWarning {expected_filters}")
 
         out = self.run_xdev("-Werror", "-c", code)
-        self.assertEqual(out,
-                         "error::Warning "
-                         "default::Warning "
-                         "ignore::DeprecationWarning "
-                         "ignore::PendingDeprecationWarning "
-                         "ignore::ImportWarning "
-                         "ignore::BytesWarning "
-                         f"{resource_action}::ResourceWarning")
+        self.assertEqual(out, f"error::Warning {expected_filters}")
 
         # Memory allocator debug hooks
         try:
